--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack",
-    "dev": "webpack --mode development"
+    "dev": "webpack --mode development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +25,8 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
-    "babel-loader": "^9.2.1"
-  }
+    "babel-loader": "^9.2.1",
+    "gh-pages": "^6.2.0"
+  },
+  "homepage": "https://github.com/Friebay/odin_todo"
 }
